[package]
name = "deno-bundle-http"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MIT"
repository = "https://github.com/Berylsoft/deno-bundle-http"
description = "Execute `deno bundle` over http request."
readme = "README.md"

[lib]
name = "deno_bundle_http"
path = "lib.rs"

[[bin]]
name = "deno-bundle-http"
path = "main.rs"

[dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
warp = "0.3" # features = ["compression"]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
